Working POST requests and call creation example