@@ -8,6 +8,8 @@ import com.twilio.sdk.resources.Call;
 import com.twilio.sdk.timing.Stopwatch;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 /**
@@ -27,7 +29,7 @@ import java.net.URL;
  */
 public class ImmediateBulkDialerExample {
 
-    public static void main(String[] args) throws MalformedURLException {
+    public static void main(String[] args) throws URISyntaxException {
         // First we are going to mock out the network and give every request a
         // uniform delay of 1000ms (1 second)
         long requestDelay = 1000L;
@@ -42,7 +44,7 @@ public class ImmediateBulkDialerExample {
         int callsToMake = 10;
 
         // Create a URL to use as the Action URL for the call creation
-        URL url = new URL("http://example.com");
+        URI url = new URI("http://example.com");
 
         // To see how the bulk dialer is more efficient, let's start a timer
         Stopwatch stopwatch = new Stopwatch();
